==> Myl6542/EmbeddedDrivers/STM32_RS485/STM32F1_SPL_RS485/GPIO/GPIO.c <==
//******************************************************************************
// Имя файла    :  'GPIO.c'
// заголовок    :  Драйвер портов ввода-вывода (F1)
// Автор        :  Маньянов Р.Р.
// Контакты     :  manianov.rus@gmail.com
// Дата         :  25.07.2015
//******************************************************************************

#include "GPIO.h"

//==============================================================================
//                      Глобальные переменные
//==============================================================================
    
    // пин TX линии USART2
    sGpio gpioUsart2Tx =
    {
        GPIOA,          
        RCC_APB2Periph_GPIOA, 
        {
            GPIO_Pin_2,                 
            GPIO_Speed_50MHz,         
            GPIO_Mode_AF_PP,
        }          
    };
    
    // пин RX линии USART2
    sGpio gpioUsart2Rx =
    {
        GPIOA,          
        RCC_APB2Periph_GPIOA, 
        {
            GPIO_Pin_3,                 
            GPIO_Speed_50MHz,         
            GPIO_Mode_IN_FLOATING,
        }          
    };

    // пин DE линии USART2
    sGpio gpioUsart2De =
    {
        GPIOA,      
        RCC_APB2Periph_GPIOA,
        {
            GPIO_Pin_1,                 
            GPIO_Speed_50MHz,       
            GPIO_Mode_Out_PP,
        },        
    };
    
    // пин RE линии USART2
    sGpio gpioUsart2Re =
    {
        GPIOA,      
        RCC_APB2Periph_GPIOA,
        {
            GPIO_Pin_4,                 
            GPIO_Speed_50MHz,       
            GPIO_Mode_Out_PP,
        },        
    };
    

    
//==============================================================================
//              Инициализация пина
//------------------------------------------------------------------------------
//  gpio    - пин
//==============================================================================

void GPIOInit (sGpio* gpio)
{
    if(gpio)
    {
        RCC_APB2PeriphClockCmd(gpio->rcc, ENABLE);  
        GPIO_Init(gpio->port, &gpio->definitions);
        
        if(gpio->remap)
        {
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, ENABLE);
            GPIO_PinRemapConfig(gpio->remap, ENABLE);
        } 
    }
}

//==============================================================================
//              Установка на пине единицы
//------------------------------------------------------------------------------
//  gpio    - пин
//==============================================================================

inline void GPIOSet (sGpio* gpio)
{
    if(gpio)
        GPIO_SetBits(gpio->port, gpio->definitions.GPIO_Pin);
}

//==============================================================================
//              Установка на пине нуля
//------------------------------------------------------------------------------
//  gpio    - пин
//==============================================================================

inline void GPIOReset (sGpio* gpio)
{
    if(gpio)
        GPIO_ResetBits(gpio->port, gpio->definitions.GPIO_Pin);
}

//==============================================================================
//              Переключение состояния пина
//------------------------------------------------------------------------------
//  gpio    - пин
//==============================================================================

inline void GPIOToggle (sGpio* gpio)
{
    if(gpio)
        GPIOWrite(!GPIOReadOut(gpio), gpio);
}

//==============================================================================
//              Установка на пине значения
//------------------------------------------------------------------------------
//  value   - значение
//  gpio    - пин
//==============================================================================

inline void GPIOWrite (uint8_t value, sGpio* gpio)
{
    if(gpio)
        GPIO_WriteBit(gpio->port, gpio->definitions.GPIO_Pin, (BitAction)value);
}

//==============================================================================
//              Чтение значения входа пина
//------------------------------------------------------------------------------
//  gpio    - пин
//==============================================================================

inline uint8_t GPIOReadIn (sGpio* gpio)
{
    if(gpio)
        return GPIO_ReadInputDataBit(gpio->port, gpio->definitions.GPIO_Pin);
    return 0;
}

//==============================================================================
//              Чтение значения выхода пина
//------------------------------------------------------------------------------
//  gpio    - пин
//==============================================================================

inline uint8_t GPIOReadOut (sGpio* gpio)
{
    if(gpio)
        return GPIO_ReadOutputDataBit(gpio->port, gpio->definitions.GPIO_Pin);
    return 0;
}
